# aws-bedrock-genai-agents-labs

./: .env.example  .gitignore  CERTIFICATE_ROADMAP.md  COURSE_01_GETTING_STARTED.md  README.md  genai-exercise1-bedrock-api-overview.ipynb  genai-exercise1-bedrock-batch.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-lint.yml
coursework/: README.md
coursework/course-01-getting-started/: README.md
coursework/course-02-generative-ai-applications/: README.md
coursework/course-03-customization-optimization-automation/: README.md
docs/: README.md  amazon_bedrock_endpoints_and_apis.md  responsible-ai-checklist.md  security-and-cost.md
labs/01-invoke-foundation-model/: README.md
labs/01-invoke-foundation-model/prompts/: business_summary_prompt.md
labs/02-amazon-q-developer/: README.md
labs/03-bedrock-guardrails/: README.md
notebooks/: bedrock_cleaned_examples.ipynb  genai-exercise1-bedrock-api-overview.ipynb  genai-exercise1-bedrock-batch.ipynb  genai-exercise1-text1.ipynb  genai-exercise1-text2.ipynb  genai-exercise1-video.ipynb
notes/: course-01.md
src/bedrock_labs/: README.md  __init__.py  config.py  invoke_converse.py  invoke_model_nova.py  list_foundation_models.py  prompt_templates.py
