[project]
name = "aws-bedrock-genai-agents-labs"
version = "0.1.0"
description = "Personal AWS Bedrock Generative AI and AI Agents learning labs."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
